# CS_CityIO

./: .babelrc  .env  .gitignore  .gitmodules  Cargo.toml  CityIO.table.data.txt  CityIOCloudAPI.pde  CmdHandler.py  ComparableJSONObject.pde  Dockerfile  README.md  TCPConnection.cs  TCPControllerJSON.cs  TCPRequestHelperJSON.cs  binaryUtils.py  boot.sh  clients.py  cmdHandler.py  debugUDP.py  docker-compose.yml  dotenv  ghp.sh  init.py  main.go  main_test.go  models.py  onetimeudprequest.py  package-lock.json  package.json  results.json  serverHandler.py  test.sh  test_table.json  tsconfig.json  tslint.json  typings.json  update.sh
app/: index.html  index.js
cityio_modules/: cityio_module_handler.py  module.sh  module_example.py  readme.md  requirements.txt  results.json  settings.json
cityio_modules/example/: simple_module.py
docs/: API.md  Client-Examples.md  Home.md  I-want-to-know-what-the-data-means-saved-in-cityio.md  Proposals,-Milestones,-and-Changelogs.md  Running-it-locally.md  _Footer.md  _Sidebar.md  cityio_documentation.md  v0.3.0-proposal.md  v0.4.0-Proposal.md  yasushi's-memo.md
examples/GAMA/: CityGamatrix.gaml  CityIOGama.gaml  CityIOGama_new.gaml
examples/Grasshopper/: README.md  cityio_get_example.ghx  read_citymatrix.gh
examples/Processing/: Block.pde  Grid.pde  PlayGround.pde  Processing.pde
examples/Virtual_table/: cityio.json  readme.md  vitrual_table.py  (+2 more)
frontend/: .gitignore  README.md  ghp.sh  index.html  index.js  package-lock.json  package.json  styles.css
models/: models.go
modules/: Table.go
scripts/: com.github.CS_CityIO_Backend.plist
src/: database.rs  handlers.rs  index.js  index.ts  lib.rs  main.rs  model.rs  models.rs  redis_helper.rs  schema.rs
static/: index.html  test.js
typings/: index.d.ts
(+51 files in other folders)
