[package]
name = "cs_cityio_backend"
version = "0.1.0"
authors = ["yasushi"]
edition = "2018"

[dependencies]
actix-web= "1.0.0"
actix-files= "0.1.3"
actix-cors= "0.1.0"

dotenv = "0.9.0"
diesel = { version="1.0.0", features = ["postgres", "r2d2", "serde_json", "chrono"] }
r2d2 = "0.8"
chrono = "0.4.7"

bytes = "0.4"
futures = "0.1"
log = "0.4"
env_logger = "*"
url = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
base64="0.10.1"

sha256 = { path="../sha256" }
