[package]
name = "cityio"
version = "3.0.0"
authors = ["Yasushi Sakai <yasushisakai+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-redis = "0.9"
actix-cors = "0.5.4"
futures = "0.3.8"
redis-async = "0.6.3"
serde = { version = "1", features = ["derive"] }
env_logger = "0.8"
dotenv = "0.15.0"
chrono = "0.4.19"
sha2 = "0.9.2"
serde_json = "1.0.61"
log = "0.4.11"
# liq = {git = "https://github.com/yasushisakai/liq"}
tokio = {version = "0.2.*", features = ["full"] }
bs58 = "0.4.0"
